# rusty-series

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: acf.rs  anomaly.rs  arima.rs  changepoint.rs  decomposition.rs  lib.rs  series.rs  smoothing.rs  spectral.rs  telemetry.rs
tests/: integration.rs
