[package]
name = "rusty-series"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/rusty-series"
description = "Comprehensive time-series analysis in Rust — decomposition, ARIMA, anomaly detection, spectral analysis"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
